--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "face-recognition",
-  "version": "0.9.4",
+  "name": "@seesemichaelj/face-recognition",
+  "version": "0.9.4-smj-0",
   "description": "Simple Node.js API for robust face detection and face recognition.",
   "keywords": [
     "face",
