--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "gypfile": true,
   "dependencies": {
-    "dlib-build": "^0.1.1",
+    "@video-face-recognition/dlib-build": "^0.1.1-vfr.0",
     "face-recognition-models": "0.0.0",
     "nan": "^2.7.0",
     "native-node-utils": "0.0.4"
